--- a/_includes:head.html
+++ b/_includes:head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Force correct paths with baseurl -->
+<!-- Force project-relative CSS paths -->
 <link rel="stylesheet" href="{{ '/public/css/poole.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/public/css/hyde.css'  | relative_url }}">
 <link rel="stylesheet" href="{{ '/public/css/print.css' | relative_url }}" media="print">
