--- a/_layouts:default.html
+++ b/_layouts:default.html
@@ -3,8 +3,15 @@ layout: null
 ---
 <!doctype html>
 <html lang="en">
-  {% include head.html %}
-  <body class="theme-base-09"> <!-- try theme-base-08..0f; add 'layout-reverse' to put sidebar on the right -->
+  <head>
+    {% include head.html %}
+    <title>
+      {% if page.title %}{{ page.title }} · {% endif %}{{ site.title }}
+    </title>
+  </head>
+  <!-- Change theme-base-09 to any Hyde preset (08..0f).
+       Add 'layout-reverse' to move sidebar to the right. -->
+  <body class="theme-base-09">
     {% include sidebar.html %}
     <div class="content container">
       {{ content }}
